added all section

--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 </head>
 
 <body>
+
     <header>
         <!-- navbar start -->
+       <div class="container">
         <nav>
             <div class="nav-container">
                 <div class="nav-title">
@@ -22,8 +24,8 @@
                     <ul>
                         <li>Home</li>
                         <li>About</li>
-                        <li>Contact</li>
-                        <li>Login Us</li>
+                        <li>Contact Us</li>
+                        <li>Login</li>
                     </ul>
                 </div>
             </div>
@@ -36,19 +38,18 @@
             <h1 class="brand-title">Brand New <br>
                 Group of Architects
             </h1>
-            <p class="item-desc">There are many variations of passages of Lorem Ipsum available, but the majority have
-                suffered alteration in <br>
-                some form, by injected humour, or randomised words which don't look even</p>
+            <p class="item-desc">There are many group of architects in this world.Here this is a new group of architects. <br> We are very happy for our global brand. </p>
             <button class="brand-btn">Explore More</button>
         </div>
         <div class="banner-img">
             <img src="./images/banner.png" alt="">
         </div>
+       </div>
 
         <!-- header brand section end  -->
     </header>
-
-    <main>
+   <div class="container">
+   <main>
         <!-- features team section start -->
         <section class="features-list-container">
             <div class="features-list-img">
@@ -61,44 +62,40 @@
                 <h2> <span class="quick-h2">Quick list</span> of Our <br>
                     <span class="feat-h2">Features</span>
                 </h2>
-                <p class="item-desc">There are many variations of passages of Lorem Ipsum available, <br> but the majority have suffered
-                    alteration in some form, by injected <br> humour, or randomised words which don't look even</p>
+                <p class="item-desc">G3 is greatly-sized enough to grip the largest of undertakings, but small enough to take a seniorlevel working group part of a group well-versed in all points of view of design and building to every single undertaking.
+                </p>
                 <button class="brand-btn">Explore More</button>
             </div>
         </section>
         <!-- features team section end -->
 
         <!-- features advantages section start -->
-        <section class="features-advantages-container">
+        <section class="features-advantages-container ">
             
             <div class="features-advantages">
                 <div class="vl"></div>
                 <div class="features-info">
                     <h1>Features you will <br> love & enjoy</h1>
-                    <p class="item-desc">There are many variations of passages of Lorem Ipsum available, but the <br> majority have
-                        suffered alteration in some form, by injected humour, or <br> randomised words which don't look
-                        even</p>
+                    <p class="item-desc">Enjoy and love the features of g3.We provide very good service. We try to <br> ensure that our clients get 100% full service from us.</p>
                 </div>
                 <div class="features-advantages-items">
                     <div class="features-advantages-item">
                         <h4>Desktop & Mobile Version</h4>
-                        <p class="item-desc">There are many variations of passages of Lorem Ipsum available, <br> but the majority have
-                            suffered alteration in some form, by <br> injected humour, or randomised...........</p>
+                        <p class="item-desc">We can design desktop and mobile versions. There are many problems when we go to Responsive. But now we can do easily............</p>
                     </div>
                     <div class="features-advantages-item">
-                        <h4>Desktop & Mobile Version</h4>
-                        <p class="item-desc">There are many variations of passages of Lorem Ipsum available, <br> but the majority have
-                            suffered alteration in some form, by <br> injected humour, or randomised...........</p>
+                        <h4>Drag & Drop Builder</h4>
+                        <p class="item-desc">drag-and-drop place in the net builders are most having general approval among freelancers, solo businessmen, small businesses, and start-ups. 
+
+                            ...........</p>
                     </div>
                     <div class="features-advantages-item">
-                        <h4>Desktop & Mobile Version</h4>
-                        <p class="item-desc">There are many variations of passages of Lorem Ipsum available, <br> but the majority have
-                            suffered alteration in some form, by <br> injected humour, or randomised...........</p>
+                        <h4>Awesome Modern Design</h4>
+                        <p class="item-desc">current-day design is a middle parts, design way represented by one-color color painter's color plate, minimalism natural materials, and natural light. ............</p>
                     </div>
                     <div class="features-advantages-item">
-                        <h4>Desktop & Mobile Version</h4>
-                        <p class="item-desc">There are many variations of passages of Lorem Ipsum available, <br> but the majority have
-                            suffered alteration in some form, by <br> injected humour, or randomised...........</p>
+                        <h4>Super Easy to Edit</h4>
+                        <p class="item-desc">We can edit very easily. We can work through different apps. Will help us a lot.So from now we can handle our website very easily............</p>
                     </div>
                 </div>
            </div>
@@ -116,10 +113,10 @@
         <!-- our services section start -->
         <section class="our-service-container">
             <div class="service-section-img">
-                <img src="./images/unnamed.png" alt="">
+                <img src="./images/unnamed.png" class="service-img" alt="">
             </div>
             <div class="our-services">
-                <h3>SERVICES</h3>
+                <h3>Our <span class="serv-span">Services</span></h3>
                 <ul>
                     
                     <li>Interior Design
@@ -155,11 +152,12 @@
         <!-- our services section end -->
 
         <!-- some facts section start -->
-        <section>
-            <div class="fact-section">
+        <section class="">
+            <div class="fact-section ">
                <div class="fact-info">
                 <h3>Some Facts</h3>
-                <p class="item-desc">There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+                <p class="item-desc">Check out our facts. Our awards, projects, Clients works, email and various other things.
+                 <br>   We try to highlight our own achievements.  </p>
                </div>
             </div>
             <div class="fact-item-container">
@@ -191,22 +189,24 @@
         <section>
             <div class="sponsor-info">
                 <h3>Our Sponspors</h3>
-                <p>There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered alteration.</p>
+                <p>
+                    Here is the list of our sponsors. They are happy to have our service. <br> They trust us and we try to keep our promises.</p>
             </div>
             <div class="sponsor-list-container">
-                <img src="./images/sponsors/spotify.png" alt="">
-                <img src="./images/sponsors/amazon.png" alt="">
-                <img src="./images/sponsors/google.png" alt="">
-                <img src="./images/sponsors/telerama.png" alt="">
-                <img src="./images/sponsors/figma.png" alt="">
+                <div><img src="./images/sponsors/spotify.png" alt=""></div>
+                <div><img src="./images/sponsors/amazon.png" alt=""></div>
+                <div><img src="./images/sponsors/google.png" alt=""></div>
+                <div><img src="./images/sponsors/telerama.png" alt=""></div>
+                <div><img src="./images/sponsors/figma.png" alt=""></div>
             </div>
         </section>
         <!-- sponsor section end -->
     </main>
     <!-- footer -->
     <footer>
-        <p>All rights reserved copyright@2023 startup landing page design</p>
+       <div class="footer-desc"> <p>All rights reserved copyright@2023 startup landing page design</p></div>
     </footer>
+   </div>
 </body>
 
 </html>
